--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -4,6 +4,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/gallery.css">
+    <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
     <script type="text/javascript" src="/static/js/mut_attr_observer.js"></script>
     <script type="text/javascript" src="/static/js/rating.js"></script>
