--- a/templates/tpl_widget_tags_panel.html
+++ b/templates/tpl_widget_tags_panel.html
@@ -1,7 +1,18 @@
-<div class="tag-panel">
-    {% for tag in tags %}
-        <a href="#" class="tag-link" data-tag="{{ tag.tag }}">&nbsp;{{ tag.tag }}&nbsp;</a>&nbsp;
-    {% endfor %}
+<div id="tags-filter" class="tags-popup" style="display: none;">
+    <h3>Tags (<span id="images-count"></span> images selected)</h3>
+    <div id="tagList" class="tag-container">
+        {% for t in tags %}
+            <div class="tag-filter" data-tag="{{ t.tag }}" data-state="0">
+                <input type="checkbox" class="tight-chk pos" id="{{ t.tag }}" value="{{ t.tag }}"/>
+                <input type="checkbox" class="tight-chk neg" id="-{{ t.tag }}" value="-{{ t.tag }}"/>
+                <label style="color:{{ t.hex }}" >{{ t.tag }}</label>
+            </div>
+        {% endfor %}
+    </div>
+    <button id="tags-filter-apply">Apply</button>
+    <button id="tags-filter-close">Close</button>
+</div>
+
 <script>
     let selectedPanelTags = []
 
@@ -9,7 +20,40 @@
     {
         fixUrl()
         initTags()
+
+        document.getElementById('tags-filter-apply').addEventListener('click', applyFilterTag)
+        document.getElementById('tags-filter-close').addEventListener('click', closeTagsFilterPopup)
+        document.querySelector('.tags-popup-background').addEventListener('click', closeTagsFilterPopup)
     }, false)
+
+    function applyFilterTag()
+    {
+        window.location.reload()
+    }
+
+    function toggleTagsFilterDisplay()
+    {
+        const popup = document.getElementById('tags-filter')
+        if (popup.style.display === 'none')
+        {
+            document.getElementById('tags-filter').style.display = 'block'
+            document.querySelector('.tags-popup-background').style.display = 'block'
+            {#document.getElementById('images-count').textContent = '' + selection.selectedIds.length#}
+        }
+        else
+        {
+            closeTagsFilterPopup()
+        }
+    }
+
+    function closeTagsFilterPopup()
+    {
+        document.getElementById('tags-filter').style.display = 'none'
+        document.querySelector('.tags-popup-background').style.display = 'none'
+
+        document.getElementById('tags-filter-apply').classList.remove('op-success', 'op-fail', 'loading')
+        document.getElementById('tags-filter-close').classList.remove('op-success', 'op-fail', 'loading')
+    }
 
     function fixUrl()
     {
@@ -23,22 +67,113 @@
         let tags = getTagsFromUrl(window.location.href)
         selectedPanelTags = tags
 
-        console.log('test')
-        document.querySelectorAll('.tag-link').forEach(link =>
+        document.querySelectorAll('.tag-filter').forEach(tagElem =>
         {
-            link.addEventListener('click', toggle_tag)
+            let tag = tagElem.getAttribute('data-tag')
 
-            const attr = link.getAttribute('data-tag')
+            if (selectedPanelTags.includes(tag)) { updateTagState(tagElem, 1) }
+            else if (selectedPanelTags.includes('-' + tag)) { updateTagState(tagElem, 2) }
+            else { updateTagState(tagElem, 0) }
+
+            tagElem.querySelector('.pos').addEventListener('click', (e) =>
+            {
+                toggleTag(e.currentTarget.parentNode, e.currentTarget.checked ? 1 : 0)
+            })
+            tagElem.querySelector('.neg').addEventListener('click', (e) =>
+            {
+                toggleTag(e.currentTarget.parentNode, e.currentTarget.checked ? 2 : 0)
+            })
+            {#tagElem.addEventListener('click', (e) =>#}
+            {#{#}
+            {#    cycleTagState(e.currentTarget)#}
+            {#})#}
+
+            const attr = tagElem.value
             if (!tags.includes(attr)) { return }
-
-            link.classList.add('tag-selected')
         })
     }
 
-    function toggle_tag(event)
+    function updateTagState(tagElem, state)
+    {
+        console.log(`state ${state}`)
+        {#let tag = tagElem.getAttribute('data-tag')#}
+        let pos = tagElem.querySelector('.pos')
+        let neg = tagElem.querySelector('.neg')
+        tagElem.classList.remove('tag-selected-pos', 'tag-selected-neg')
+
+        if (state === 0)
+        {
+            pos.checked = false
+            neg.checked = false
+        }
+        else if (state === 1)
+        {
+            pos.checked = true
+            neg.checked = false
+            tagElem.classList.add('tag-selected-pos')
+        }
+        else if (state === 2)
+        {
+            pos.checked = false
+            neg.checked = true
+            tagElem.classList.add('tag-selected-neg')
+        }
+
+        tagElem.setAttribute('data-state', state)
+    }
+
+    function toggleTag(tagElem, state)
+    {
+        let tag = tagElem.getAttribute('data-tag')
+
+        console.log(`${tag}`)
+
+        console.log(this)
+        let full_url = window.location.href
+        const pageString = full_url.split('?')[0]
+        let ids = getTagsFromUrl(full_url)
+
+        if (state === 0)
+        {
+            ids.remove(tag)
+            ids.remove('-' + tag)
+        }
+        else if (state === 1)
+        {
+            ids.push(tag)
+            ids.remove('-' + tag)
+        }
+        else if (state === 2)
+        {
+            ids.remove(tag)
+            ids.push('-' + tag)
+        }
+
+        selectedPanelTags = ids
+
+        console.log(`${ids}`)
+
+        const newTagsList = ids.join(',').replace(/^,/, "")
+        let queryString = full_url.split('?')[1]
+        let params = new URLSearchParams(queryString)
+        params.set('tags', encodeURIComponent(newTagsList))
+        let newUrl = pageString + '?' + decodeURIComponent(params.toString())
+        window.history.replaceState({}, '', newUrl)
+
+        updateTagState(tagElem, state)
+    }
+
+    function cycleTagState(tagElem)
+    {
+        const state = parseInt(tagElem.getAttribute('data-state'))
+        const newState = (state + 1) % 3
+        toggleTag(tagElem, newState)
+    }
+
+    function toggleTag1(event)
     {
         console.log('test')
-        const tagId = event.currentTarget.getAttribute('data-tag')
+        const tagId = event.currentTarget.value
         const link = event.currentTarget
 
         console.log(this)
@@ -81,4 +216,3 @@
         return tags.split(',')
     }
 </script>
-</div>
