ImageMetadata can return absolute path of the image in the file system

--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -63,7 +63,7 @@
 
         <div id="popup" class="popup">
             <div class="popup-row">
-                <span id="path">{{ image.path }}</span>
+                <span id="path">{{ image.path_abs }}</span>
                 <button id="copyButton">Copy</button>
             </div>
             <div class="popup-row">
