fixed some hardcoded urls

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -10,7 +10,7 @@
     <h1>Overview</h1>
     <a href="/favs?page=1">Favourites</a>
     <a href="/latest_study?page=1">Last study</a>
-    <a href="/tagged?page=1&tags=&tag-set=1">Search by tags</a>
+    <a href="/tagged?page=1&tags=&tag-set=">Search by tags</a>
     <a href="/tags">Tags</a>
     <a href="/tag-sets">Sets</a>
 </div>
