added pallet view and ability to link color to an image

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -13,6 +13,7 @@
     <a href="/tagged?page=1&tags=&tag-set=">Search by tags</a>
     <a href="/tags">Tags</a>
     <a href="/tag-sets">Sets</a>
+    <a href="/image-colors">Pallets</a>
 </div>
 <div class="tiles-container">
 {% for img in images %}
