--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -223,15 +223,36 @@ span #time-current {
     right: 10px;
     max-width: 200px;
 }
+
+.pallet-wrap
+{
+    display: flex;
+    justify-content: flex-end;
+}
+
 .pallet-cell
 {
+    display: flex;
     font-family: "Courier New", monospace;
     color: rgba(0,0,0,0.3);
     width: 150px;
     height: 25px;
-    display: flex;
     text-align: right;
     justify-content: right;
     align-items: center;
     border: 2px solid rgba(0,0,0,0.2);
+}
+
+
+
+.pallet-save-btn
+{
+    display: inline;
+    margin: 3px;
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    /*border: 0;*/
+    background-color: rgba(1,1,1,0);
+    background-image: url("/static/edit.png");
 }
