--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -256,3 +256,13 @@ span #time-current {
     background-color: rgba(1,1,1,0);
     background-image: url("/static/edit.png");
 }
+
+#pallet-frame
+{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    border: 4px solid rgba(0,0,0,0.5);
+    box-sizing: border-box;
+    pointer-events: none;
+}
