--- a/templates/crud/tpl_tagset_add.html
+++ b/templates/crud/tpl_tagset_add.html
@@ -8,22 +8,22 @@
 <body>
 <div class="header">
     <a class="back-btn no-decor btn-bg-blend" href="{{ url_for('routes_tags.list_tag_sets')}}">&lt;</a>
-    <h1>{{ tag_set.set_name }}</h1>
+    <h1>Add Set</h1>
 </div>
-<form method="POST" action="{{ url_for('routes_tags.tag_set_edit', tag_set_id=tag_set.id) }}">
+<form method="POST" action="{{ url_for('routes_tags.tag_set_add') }}">
     <label for="set_name">Set Name:</label>
-    <input type="text" name="set_name" id="set_name" value="{{ tag_set.set_name }}">
+    <input type="text" name="set_name" id="set_name" value="">
     <br/>
     <label for="set_alias">Set Alias:</label>
-    <input type="text" name="set_alias" id="set_alias" value="{{ tag_set.set_alias }}">
+    <input type="text" name="set_alias" id="set_alias" value="">
     <br/>
     <label for="tag_list_pos">Tag positive:</label>
-    <input type="text" name="tag_list_pos" id="tag_list_pos" value="{{ tag_set.tag_names_pos_str }}">
+    <input type="text" name="tag_list_pos" id="tag_list_pos" value="">
     <br/>
     <label for="tag_list_neg">Tag negative:</label>
-    <input type="text" name="tag_list_neg" id="tag_list_neg" value="{{ tag_set.tag_names_neg_str }}">
+    <input type="text" name="tag_list_neg" id="tag_list_neg" value="">
     <br/>
-    <button type="submit">Update</button>
+    <button type="submit">Add</button>
     <div>
     {% for t in tags %}
         <div style="color: {{ t.color.hex }}">{{ t.id }}: {{ t.tag }}</div>
