--- a/templates/crud/tpl_tagsets_list.html
+++ b/templates/crud/tpl_tagsets_list.html
@@ -10,21 +10,22 @@
     <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a>
     <h1>Tags</h1>
 </div>
-    <ul>
-        {% for tag_set in tag_sets %}
-            <li>
-                <h2>{{ tag_set.set_name }} [{{ tag_set.set_alias }}]</h2>
-                {% set tags = tag_set.get_tags_names() %}
-                {% set tags_pos = tags[0] %}
-                {% set tags_neg = tags[1] %}
-                <p>Includes: {{ tags_pos|join(', ') }}</p>
-                <p>Removes: {{ tags_neg|join(', ') }}</p>
-                <a href="{{ url_for('routes_tags.tag_set_edit', tag_set_id=tag_set.id) }}">Edit</a>
-                {#    <form method="POST" action="{{ url_for('delete_tag_set', tag_set_id=tag_set.id) }}" onsubmit="return confirm('Are you sure you want to delete this tag set?');">#}
-                {#      <button type="submit">Delete</button>#}
-                {#    </form>#}
-            </li>
-        {% endfor %}
-    </ul>
+<a href="{{ url_for('routes_tags.tag_set_add') }}">Add Set</a>
+<ul>
+    {% for tag_set in tag_sets %}
+        <li>
+            <h2>{{ tag_set.set_name }} [{{ tag_set.set_alias }}]</h2>
+            {% set tags = tag_set.get_tags_names() %}
+            {% set tags_pos = tags[0] %}
+            {% set tags_neg = tags[1] %}
+            <p>Includes: {{ tags_pos|join(', ') }}</p>
+            <p>Removes: {{ tags_neg|join(', ') }}</p>
+            <a href="{{ url_for('routes_tags.tag_set_edit', tag_set_id=tag_set.id) }}">Edit</a>
+            {#    <form method="POST" action="{{ url_for('delete_tag_set', tag_set_id=tag_set.id) }}" onsubmit="return confirm('Are you sure you want to delete this tag set?');">#}
+            {#      <button type="submit">Delete</button>#}
+            {#    </form>#}
+        </li>
+    {% endfor %}
+</ul>
 </body>
 </html>
