--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -146,6 +146,7 @@ body {
     /*flex-wrap: wrap;*/
     align-self: flex-start;
     /*justify-content: space-between;*/
+    transition: background-color 0.15s;
 }
 .modal-controls .row {
     display: flex;
@@ -162,6 +163,11 @@ body {
 .modal-controls .space
 {
     margin-left: 10px;
+}
+
+.modal-controls:hover
+{
+    background-color: rgba(84, 81, 81, 60%);
 }
 
 @media only screen and (max-width: 768px) {
