--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -3,6 +3,7 @@
     <title>Gallery overview</title>
     <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/overview.css">
+    <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
 </head>
 <body>
@@ -17,11 +18,11 @@
 </div>
 <div class="tiles-container">
 {% for img in images %}
-    <div class="tile">
+    <div class="tile {{ '' if img.hidden == 0 else 'tile-hidden' }}">
         <div class="bg-thumb" data-src="/thumb/{{ img.image_id }}.jpg"></div>
         <div class="overlay">
             <a class="a-hidden" href="/folder/{{ img.path_id }}" target="_blank"><h2>[{{ img.study_type }}]</h2></a>
-            <a class="a-hidden" href="/folder/{{ img.path_id }}" target="_blank"><p>{{ img.path }}</p></a>
+            <a class="a-hidden" href="/folder/{{ img.path_id }}" target="_blank"><p>{{ img.path_dir }}</p></a>
             <a href="/folder/{{ img.path_id }}" target="_blank">Folder <img class="dir-link" src="/static/link.png"></a>
             <a href="/study-image/{{ img.image_id }}?same-folder=true&time-planned=120" target="_blank">First id:{{ img.image_id }}</a>
         </div>
