--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -13,7 +13,7 @@
 <body>
 <div class="header">
     <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a><h1>{{ title }}</h1>
-    <p>[{{ overview.study_type|default('') }}]</p><p>{{ overview.path|default('') }}</p>
+    <p>[{{ overview.study_type|default('') }}]</p><p>{{ overview.path_dir|default('') }}</p>
 </div>
 {{ panel|default('') }}
 {{ paging|default('') }}
